css/watchlist.css
* {
    box-sizing: border-box;
}

/*TYpoGRAfy*/

body {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    margin: 0;
    font-weight: 400;
}

header {
    background: url("https://www.themoviedb.org/t/p/w1920_and_h600_multi_faces_filter(duotone,032541,01b4e4)/6LfVuZBiOOCtqch5Ukspjb9y0EB.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    background-blend-mode: darken;
    height: 11em;
    padding: 0 2em;
    background-color: #222424a9;
    position: relative;
    color: #edf6f9;
}

header h1{
    font-size: 1.5rem;
}

header form {
    position: absolute;
    bottom: -.7em;
    left: 0;
    right: 0;
}

main p{
    line-height: 1.5rem;
}

.container {
    padding: 2em;
    text-align: left;
}

.movie-container.d-flex {
    padding: .5em 0;
}


.movie-container.d-flex img {
    border-radius: 2px 2px 0 0;
    width: 100%;
    height: 20em;
    object-position: top;
}

.movie-container.d-flex div {
    padding: 0 1em;
    background: #edf6f9;
    border-radius: 0 0 2px 2px;
}

.strong{
    font-weight: 500;
}

a,
button {
    cursor: pointer;
}

a:focus,
a:hover {
    color: #edf6f9;
    border-top: 1px solid#edf6f9;
    border-bottom: 1px solid#edf6f9;
}

a {
    text-decoration: none;
    padding-bottom: .2em;
    border-top: 1px solid#e29578;
    border-bottom: 1px solid#e29578;
    color: #edf6f9;
}

button {
    font-family: inherit;
    color: #edf6f9;
    background: #e29578;
    border: none;
    border-radius: 50%;
}

.remove, .add{
    width: 18px;
    height: 18px;
}

button:focus,
button:hover {
    background: #e4815e;
}

img {
    max-width: 100%;
    min-height: 100%;
    height: auto;
    object-fit: cover;
}

.genre{
    margin-right: 2em;
}


footer {
    padding: 2em;
}

footer img,
footer p {
    padding: 0 .5em;
    margin: 0;
}

footer img {
    width: 6em;
}

footer p {
    font-size: .8rem;
    color: #edf6f9;
}

footer a, h1 a{
    border: none;
    padding: 0;
}

footer a:focus,
footer a:hover,
h1 a:focus,
h1 a:hover {
    border: none;
}

@media screen AND (min-width:750px) {
    header {
        height: 15em;
        padding: 0 8em;
    }

    header h1{
        font-size: 2rem;
    }

    .container {
        padding: 4em 8em;
    }

    .movie-container.d-flex {
        padding: 1em 0;
    }

    .movie-container.d-flex img {
        border-radius: 2px 0 0 2px;
        width: 12.5em;
        height: auto;
    }
    
    .movie-container.d-flex div {
        border-radius: 0 2px 2px 0;
    }

    .w-100{
        width: 100%;
    }
    
    .w-80{
        width: 80%;
    }
}

/*LAyout*/

.d-flex {
    display: flex;
}

header.d-flex,
footer.d-flex {
    align-items: center;
}

header.d-flex {
    justify-content: space-between;
}

.container.d-flex {
    flex-direction: column;
}

.movie-container.d-flex {
    flex-direction: column;
}

footer.d-flex {
    justify-content: center;
}

footer {
    background: #0d253f;
}

@media screen AND (min-width:750px) {
    .movie-container.d-flex {
        flex-direction: row;
        justify-content: space-between;
    }
}

